# QuARC

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Functions.cpp  Vagrantfile  configure  readme.org
IFC6410/: Functions.h
Nucleo/: main.cpp
design-report/: block-diagram.dot  functional-block-diagram.dot  software-flowchart.dot  user-interface-flowchart.dot
doc/design-report/: software-flowchart.dot
doc/impl-plan/: project_flow.dot
doc/minutes/: 19-jul-minutes.org  2015-07-19-Wed.org
doc/poster/: poster_flow.dot
env/: provision.sh
google-docs/test-eval-plan/: execution.dot  test-eval-plan.dot
lib/: CMakeLists.txt
lib/User Interface/User Interface/: Point.cpp  Point.hpp  main.cpp
lib/User Interface/User Interface.xcodeproj/: project.pbxproj
lib/User Interface/User Interface.xcodeproj/project.xcworkspace/xcuserdata/Stormy.xcuserdatad/: UserInterfaceState.xcuserstate
lib/User Interface/User Interface.xcodeproj/xcuserdata/Stormy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
lib/User Interface/User Interface.xcodeproj/xcuserdata/Stormy.xcuserdatad/xcschemes/: User Interface.xcscheme  xcschememanagement.plist
lib/ik/: node.cpp  node.hpp  position.cpp  position.hpp  vector.cpp  vector.hpp
resources/: Functions.cpp  motorControl.cpp  motorControl.hpp
resources/Nucleo/: .hg_archival.txt  mbed.bld
tests/: CMakeLists.txt
tests/distance-projection/: CMakeLists.txt  distance-projection.cpp
tests/ik/: CMakeLists.txt  node.cpp  node.hpp  vector.cpp  vector.hpp
tests/vector-math/: CMakeLists.txt  vector-math.cpp
